// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control deve renderizar corretamente 1`] = `
<span>
  <Icon
    className="error-indicator"
    icon="invalido"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    size="small"
  />
  <Popover
    className="error-popover"
    placement="right"
    show={false}
    target={[Function]}
  >
    <p
      className="error-title"
    >
      titulo
    </p>
    <p
      className="error-message"
    >
      mensagem
    </p>
  </Popover>
</span>
`;

exports[`Control deve renderizar corretamente 2`] = `
<span>
  <Icon
    className="error-indicator"
    icon="invalido"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    size="small"
  />
  <Popover
    className="error-popover"
    placement="right"
    show={true}
    target={[Function]}
  >
    <p
      className="error-title"
    >
      titulo
    </p>
    <p
      className="error-message"
    >
      mensagem
    </p>
  </Popover>
</span>
`;

exports[`Control deve renderizar corretamente 3`] = `
<span>
  <Icon
    className="error-indicator"
    icon="invalido"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    size="small"
  />
  <Popover
    className="error-popover"
    placement="right"
    show={false}
    target={[Function]}
  >
    <p
      className="error-title"
    >
      titulo
    </p>
    <p
      className="error-message"
    >
      mensagem
    </p>
  </Popover>
</span>
`;
